Dodane: https-dziala lokalnie z nginx i certyfikatami wygenerowanymi z open ssl, dodatkowo sa dodane pliki z projektu django mp3_translations, ale nie podpiete do aplikacji flask

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,15 @@
 server {
 
-    listen 80;
+    # listen 80;
 
+    # server_name szymon.yt;
+    # root /home/web/default;
+    listen 443 ssl;
     server_name szymon.yt;
     root /home/web/default;
+
+    ssl_certificate /certs/cert.pem;
+    ssl_certificate_key /certs/key.pem;
 
     location /static/ {
 
